--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
   <body>
    <a href="1-blue-box.html">1-blue-box</a>
    <a href="2-textures.html">2-textures</a>
+   <a href="3-uv-mapping.html">3-uv-mapping</a>
+   <a href="4-lights.html">4-lights</a>
   </body>
 </html>
